deployment/youtil-be-prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtil-be-prod
  namespace: youtil-prod
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: youtil-be-prod
  template:
    metadata:
      labels:
        app: youtil-be-prod
    spec:
      containers:
        - name: youtil-be-prod
          image: 854383975470.dkr.ecr.ap-northeast-2.amazonaws.com/youtil/be-prod:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
