deployment/youtil-be-prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtil-be-service-prod
  namespace: youtil-prod
spec:
  type: ClusterIP
  selector:
    app: youtil-be-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
