deployment/youtil-fe-prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtil-fe-service-prod
  namespace: youtil-prod
spec:
  type: ClusterIP
  selector:
    app: youtil-fe-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
